--- a/mobile.css
+++ b/mobile.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
 *{
     padding: 0px;
     margin: 0px;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
     --azul1: #044BD9;
@@ -19,18 +22,26 @@ body{
 }
 main{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 main > h1{
     text-align: center;
     font-family: "Poppins", sans-serif;
-    color: var(--laranja);
+    color: white;
     font-size: 3.5rem;
     margin-top: 5vh;
     margin-bottom: 40px;
-    font-weight: 700;
     
 
+}
+
+main > h1 > span{
+    color: var(--laranja);
+    font-family: "Poppins", sans-serif;
 }
 
 form{
@@ -39,6 +50,10 @@ form{
     justify-content: center;
     align-items: center;
     gap: 30px;
+    padding: 5vw;
+    width: 80vw;
+    background-color: white;
+    border-radius: 15px;
 }
 
 form > input{
@@ -47,6 +62,7 @@ form > input{
     height: 7vh;
     padding: 8px;
     border: none;
+    background-color: #dadada;
     
     
 }
@@ -56,6 +72,7 @@ form > textarea{
     border-radius: 5px;
     height: 20vh;
     padding: 5px;
+    background-color: #dadada;
 }
 
 .botoes{
@@ -76,6 +93,7 @@ form > textarea{
     cursor: pointer;
     font-family: "Open sans", sans-serif;
     font-size: 1rem;
+    background-color: var(--laranja);
     
     
     
@@ -99,7 +117,20 @@ form > textarea{
     border-radius: 10px;
     border: none;
     padding: 5px;
+    background-color: #ffffff49;
+    border: 1px solid white;
+    color: white;
+    font-size: 1rem;
+    font-family: "Open Sans", sans-serif;
 }
+
+.classFiltro::placeholder{
+    color: white;
+    font-size: 1rem;
+    font-family: "Open Sans", sans-serif;
+}
+
+
 
 .classBackup{
     width: 50vw;
@@ -108,7 +139,7 @@ form > textarea{
     border: none;
     margin-top: 20px;
     cursor: pointer;
-    font-family: "Opens Sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 1rem;
 
 }
@@ -142,6 +173,7 @@ form > textarea{
     
 }
 
+
 .classCategoria{
     height: 100%;
     width: 50%;
@@ -155,7 +187,7 @@ form > textarea{
 .classCategoria > p{
     font-size: 1.2rem;
     color: white;
-    font-family: "Opens Sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
     cursor: pointer;
 }
 
@@ -191,8 +223,9 @@ form > textarea{
     justify-content: center;
 }
 
+
 .divtexto{
-    border: 3px solid var(--laranja);
+    border-bottom: 4px solid var(--laranja);
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -201,12 +234,15 @@ form > textarea{
     height: 75%;
     border-radius: 20px;
     margin-bottom: 10px;
+    padding: 5px;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.26);
 }
 
 .divtexto > p{
     color: white;
-    font-family: "Open sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: 400;
+    text-align: center;
 }
 
 .classDivGuia{
@@ -215,7 +251,7 @@ form > textarea{
     align-items: center;
     width: 80vw;
     color: white;
-    font-family: "Opens sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
     height: 6vh;
     margin-bottom: 2vh;
     gap: 30vw;
@@ -237,24 +273,34 @@ form > textarea{
 
 
 .classBtnExcluir{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border: none;
-    width: 20%;
+    width: 25%;
     height: 100%;
     border-radius: 10px;
-    background-color: var(--azul3);
+    gap: 5px;
+}
+
+.classBtnExcluir:hover{
+    background-color: rgb(255, 177, 177);
+    color: red;
 }
 
 
 
+
 .classBtnExcluir > img{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     
 }
 
 .divBotoes{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     width: 80vw;
@@ -263,14 +309,39 @@ form > textarea{
 }
 
 .divBotoes > button{
-    width: 80%;
-    border-radius: 5px;
+    border-radius: 20px;
     border: none;
-    height: 20vh;
+    height: 9vh;
+    font-family: "Open Sans";
+}
+    
+
+
+
+.classBtnResposta{
+    background-color: var(--laranja);
+    width: 50%;
+    font-size: 1.05rem;
+   
+
+}
+
+
+
+.classBtnProximo{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.classBtnProximo > img{
+    width: 40%;
 }
 
 .classBtnVoltar{
-    height: 50% !important;
+    width: 100%;
 }
 
 
